tests/snapshots/cli__reference_files@unary__1.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/1.unary
---
status: 0
stdout:
  - "8959454.527119473"
stderr: []
