tests/snapshots/cli__reference_files@unary__10.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/10.unary
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/interpreter.rs:50:55:"
  - attempt to divide by zero
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
