tests/snapshots/cli__reference_files@unary__12.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/12.unary
---
status: 0
stdout:
  - "712.981585501751"
stderr: []
