tests/snapshots/cli__reference_files@unary__13.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/13.unary
---
status: 0
stdout:
  - "2465267.2"
stderr: []
