tests/snapshots/cli__reference_files@unary__14.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/14.unary
---
status: 0
stdout:
  - "188972.6484646578"
stderr: []
