tests/snapshots/cli__reference_files@unary__16.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/16.unary
---
status: 0
stdout:
  - "39697.35037406484"
stderr: []
