tests/snapshots/cli__reference_files@unary__17.unary.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/unary/17.unary
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/scanner.rs:113:59:"
  - "called `Result::unwrap()` on an `Err` value: ParseIntError { kind: PosOverflow }"
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
